--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -21,7 +21,7 @@ losses:
   balance: {weight: 0.0}              # promote usage of all channels. default 0.1
   spike: {weight: [0.0, 0.0], channels: [0,1,2,3,4]}  # encourage sharp peaks in sparse channels
   overlap: {weight: [0.0, 0.05]}              # discourage spatial overlap of top activations
-  mask: {weight: [0.0, 0.0], channel: [3,4], rgb: [[90, 200, 90],[85, 60, 10]], thresh: [0.05, 0.05]}
+  # mask: {weight: [0.0, 0.0], channel: [3,4], rgb: [[90, 200, 90],[85, 60, 10]], thresh: [0.05, 0.05]}
 channel_names:
   - H
   - CDX2
